<resources>
    <string name="app_name">Custom Views Udacity Project</string>

    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="channel_name">Udacity File Download</string>
    <string name="channel_id">19</string>
    <string name="notification_title">Udacity: Android Kotlin Nanodegree </string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="file_name_header">File Name:</string>
    <string name="status_name_header">Status :</string>
    <string name="ok_btn_txt">OK</string>
    <string name="file_name_key">FILE_NAME</string>
    <string name="status_key">STATUS_KEY</string>

    <string name="button_name">Click me to Start Download</string>
    <string name="button_loading">Download in progress..</string>
    <string name="button_download_error">Failed to Download.</string>
    <string name="button_download_finished">Download Finished</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="glide_file_name">Glide Repo Code</string>
    <string name="project_file_name">Project Repo Code</string>
    <string name="retrofit_file_name">Retrofit Repo Code</string>

    <string name="glide_title">Glide - Image Loading Library by BumpTech</string>
    <string name="loadApp_title">LoadApp - Current repository by Udacity</string>
    <string name="retrofit_title">Retrofit - Type-safe HTTP client for Android and Java by Square Inc.</string>

    <string name="glide_link">https://github.com/bumptech/glide/archive/master.zip</string>
    <string name="project_link">https://github.com/udacity/nd940-c3-advanced-android-programming-project-starter/archive/master.zip</string>
    <string name="retrofit_link">https://github.com/square/retrofit/archive/master.zip</string>

    <string name="choose_lib">Please select Library to download</string>
    <string name="check_status">Check the status</string>

</resources>