<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="contentMain"
            type="com.example.customviewsudacityproject.viewModels.MainActivityViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/main_layout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!--    Custom Button to be placed here-->
        <RadioGroup
            android:id="@+id/download"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/glide_title"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/glide_radio_btn" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loadApp_title"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto_medium"
                android:id="@+id/project_radio_btn" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/retrofit_radio_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/retrofit_title" />

        </RadioGroup>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>