<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".DetailActivity"
        android:id="@+id/root_layout"
        app:layoutDescription="@xml/activity_detail_scene">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/files_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/file_info_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:orientation="horizontal"
                android:padding="12dp"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/file_name_header"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/file_name_header" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/file_name"
                    android:layout_width="0dp"
                    android:textSize="22sp"
                    android:maxLines="3"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/file_status_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:padding="12dp"
                android:orientation="horizontal"
                android:weightSum="2">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status_header"
                    android:layout_width="0dp"
                    android:textSize="18sp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/status_name_header" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/status"
                    android:layout_width="0dp"
                    android:textSize="22sp"
                    android:textColor="@color/colorPrimaryDark"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ok_button"
            android:text="@string/ok_btn_txt"
            android:textColor="@color/white"
            android:textSize="22sp"
            android:background="@color/colorAccent"
            android:layout_margin="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>
    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>